# jerronimo-testing

./: CMakeLists.txt  testing.db
sqlite/: CMakeLists.txt
src/: CMakeLists.txt  dupa.cpp  sqlite_poligon.h  unresolved_symbol.cpp  unresolved_symbol.h
test/: CMakeLists.txt  example.cpp  example2.cpp
trunk/: CMakeLists.txt
trunk/sqlite/: CMakeLists.txt
trunk/src/: CMakeLists.txt  sqlite_poligon.cpp  sqlite_poligon.h
trunk/test/: CMakeLists.txt  example.cpp  example2.cpp
